--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,39 +1,5 @@
-[package]
-name = "log3-lambda"
-version = "0.1.0"
-edition = "2021"
+[workspace]
 
-# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
-# to your project.
-#
-# If you're using an older Rust version,
-# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
-# to install the `add` subcommand.
-#
-# Running `cargo add DEPENDENCY_NAME` will
-# add the latest version of a dependency to the list,
-# and it will keep the alphabetic ordering for you.
+members = ["lib", "lambda", "cli"]
 
-[dependencies]
-lambda_http = "0.8.1"
-lambda_runtime = "0.8.1"
-tokio = { version = "1", features = ["macros"] }
-tracing = { version = "0.1", features = ["log"] }
-tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
-ethers-core = { git = "https://github.com/gakonst/ethers-rs", version = "2.0.7" }
-ethers-etherscan = { git = "https://github.com/gakonst/ethers-rs", version = "2.0.7" }
-ethers-providers = { git = "https://github.com/gakonst/ethers-rs", version = "2.0.7" }
-ethers-solc = { git = "https://github.com/gakonst/ethers-rs", version = "2.0.7" }
-foundry-common = { git = "https://github.com/foundry-rs/foundry.git", version = "0.1.0" }
-foundry-evm = { git = "https://github.com/foundry-rs/foundry.git", version = "0.2.0" }
-foundry-config = { git = "https://github.com/foundry-rs/foundry.git", version = "0.2.0" }
-eyre = "0.6.8"
-regex = "1.9.1"
-serde = "1.0.174"
-serde_json = "1.0.103"
-serde_repr = "0.1.16"
-
-# [patch."https://github.com/foundry-rs/foundry.git"]
-# foundry-common = { path = "../foundry/common" }
-# foundry-evm = { path = "../foundry/evm" }
-# foundry-config = { path = "../foundry/config" }
+[workspace.dependencies]
